Fix overflow on mobile

--- a/index.css
+++ b/index.css
@@ -43,6 +43,7 @@ body {
     margin: 0;
     display: flex;
     height: 100vh;
+    overflow: hidden;
 }
 .home .body {
     display: flex;
